@@ -82,9 +82,9 @@
 </td>
 <td class=cellinside>0.6.9
 </td>
-<td class=cellinside>2016-05-04
+<td class=cellinside>2016-05-19
 </td>
-<td class=cellinside>12:18:03
+<td class=cellinside>16:19:20
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
