@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Thu May 19 15:04:04 2016
+% Thu May 19 16:27:45 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -8,7 +8,7 @@
   \hline
 1 & analyse\_baSAR & Bayesian models (baSAR) applied on luminescence data & $<$br /$>$ This function allows the application of Bayesian models (baSAR) on luminescecence data based on the$<$br /$>$ contribution by Combes et al., 2015. Internally the function consists of two parts: (I) Bayesian core$<$br /$>$ for the bayesian calculations and (II) data preparation part. The Bayesian core can be run independently$<$br /$>$ and the second part was implemented to simplify the analysis. For the Bayesian analysis for each aliquot$<$br /$>$ the following information are needed from the SAR analysis. De and LxTx and dose values for all regeneration points.$<$br /$>$ & 0.1.0 & 2016-05-19 & 15:01:35
  & $<$br /$>$ Norbert Mercier, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France), Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  $<$br /$>$ $<$br /$>$ The underlying Bayesian model based on a contribution by Combes et al., 2015.$<$br /$>$  R Luminescence Package Team \\ 
-  2 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.6.9 & 2016-05-04 & 12:18:03
+  2 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.6.9 & 2016-05-19 & 16:19:20
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   3 & analyse\_pIRIRSequence & Analyse post-IR IRSL sequences & $<$br /$>$ The function performs an analysis of post-IR IRSL sequences including curve$<$br /$>$ fitting on  RLum.Analysis  objects.$<$br /$>$ & 0.2.0 & 2016-01-18 & 15:07:46
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
